Corrected Bigostarto url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-  <h1><a href="Bigostarto">Bigostarto</a></h1>
+  <h1><a href="http://www.bigolaro.ch/">Bigostarto</a></h1>
 
   <h1>Posts</h1>
 
